[tool.poetry]
name = "fastapi-openapi-generator"
version = "0.1.0"
description = ""
authors = ["Gaganpreet Arora <me@gaganpreet.in>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
